--- a/TOOL_NUCLEOH743ZI.ioc
+++ b/TOOL_NUCLEOH743ZI.ioc
@@ -4,6 +4,8 @@ CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
+FATFS.IPParameters=_USE_STRFUNC
+FATFS._USE_STRFUNC=0
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configTIMER_TASK_STACK_DEPTH,configUSE_POSIX_ERRNO,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configMINIMAL_STACK_SIZE,configENABLE_FPU,configRECORD_STACK_HIGH_ADDRESS
 FREERTOS.Tasks01=defaultTask,24,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
@@ -16,22 +18,36 @@ FREERTOS.configUSE_POSIX_ERRNO=0
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
 KeepUserPlacement=false
+LWIP.BSP.number=1
 LWIP.Version=v2.0.3_Cube
+LWIP0.BSP.STBoard=false
+LWIP0.BSP.api=BSP_COMPONENT_DRIVER
+LWIP0.BSP.component=LAN8742
+LWIP0.BSP.condition=
+LWIP0.BSP.i2caddr=0
+LWIP0.BSP.i2creg=
+LWIP0.BSP.instance=LAN8742
+LWIP0.BSP.ip=
+LWIP0.BSP.mode=
+LWIP0.BSP.name=Driver_PHY
+LWIP0.BSP.semaphore=
+LWIP0.BSP.solution=LAN8742
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=ETH
-Mcu.IP10=USART3
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
-Mcu.IP2=FREERTOS
-Mcu.IP3=IWDG1
-Mcu.IP4=LIBJPEG
-Mcu.IP5=LWIP
-Mcu.IP6=MBEDTLS
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IP10=SYS
+Mcu.IP11=USART3
+Mcu.IP12=USB_DEVICE
+Mcu.IP13=USB_OTG_FS
+Mcu.IP2=FATFS
+Mcu.IP3=FREERTOS
+Mcu.IP4=IWDG1
+Mcu.IP5=LIBJPEG
+Mcu.IP6=LWIP
+Mcu.IP7=MBEDTLS
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=14
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -51,21 +67,22 @@ Mcu.Pin20=PA12
 Mcu.Pin21=PG11
 Mcu.Pin22=PG13
 Mcu.Pin23=PB7
-Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin25=VP_IWDG1_VS_IWDG
-Mcu.Pin26=VP_LIBJPEG_VS_JPEGLIB
-Mcu.Pin27=VP_LWIP_VS_Enabled
-Mcu.Pin28=VP_MBEDTLS_VS_MBEDTLS
-Mcu.Pin29=VP_SYS_VS_tim1
+Mcu.Pin24=VP_FATFS_VS_Generic
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin26=VP_IWDG1_VS_IWDG
+Mcu.Pin27=VP_LIBJPEG_VS_JPEGLIB
+Mcu.Pin28=VP_LWIP_VS_Enabled
+Mcu.Pin29=VP_MBEDTLS_VS_MBEDTLS
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_SYS_VS_tim1
+Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PC1
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -385,6 +402,8 @@ USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_IWDG1_VS_IWDG.Mode=IWDG_Activate
